--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>My Page</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="png" href="l.png">
 </head>
 <body>
 
@@ -52,12 +53,12 @@
     <h2>Projects</h2>
     <div class="project-card">
       <h3>Project 1</h3>
-      <p>Description of project 1.</p>
+      <p>Coming soon...</p>
       <a href="https://github.com/ziyad455/PROJECT1" class="btn">View on GitHub</a>
     </div>
     <div class="project-card">
       <h3>Project 2</h3>
-      <p>Description of project 2.</p>
+      <p>Coming soon...</p>
       <a href="https://github.com/ziyad455/PROJECT2" class="btn">View on GitHub</a>
     </div>
     <!-- Add more project cards as needed -->
