--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  <!-- Navbar -->
+
   <header>
 
       <img src="logo.png" alt="Logo">
@@ -27,13 +27,13 @@
     </div>
   </header>
 
-  <!-- Home Section -->
+
   <section id="home" class="hom">
     <div class="home-content">
       <h1>HI, I'M Ziyad</h1>
       <p>Welcome to my personal page! Here, you'll find information about my projects, skills, and experiences. I'm passionate about technology and always eager to learn new things. Feel free to explore and connect with me through the links provided.</p>
       <div class="social-icons">
-        <a href="https://www.linkedin.com" title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="www.linkedin.com/in/ziyad-tber-02109533b" title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
         <a href="https://github.com/ziyad455/MASTER.git" title="GitHub"><i class="fa-brands fa-github"></i></a>
       </div>
     </div>
@@ -42,13 +42,13 @@
     </div>
   </section>
 
-  <!-- About Section -->
+  
   <section id="about">
     <h2>About Me</h2>
     <p>I'm Ziyad, a passionate developer with a keen interest in web development and AI. I enjoy creating innovative solutions and constantly improving my skills.</p>
   </section>
 
-  <!-- Projects Section -->
+  
   <section id="projects">
     <h2>Projects</h2>
     <div class="project-card">
@@ -61,17 +61,17 @@
       <p>Coming soon...</p>
       <a href="https://github.com/ziyad455/PROJECT2" class="btn">View on GitHub</a>
     </div>
-    <!-- Add more project cards as needed -->
+  
   </section>
 
-  <!-- Skills Section -->
+
   <section id="skills">
     <h2>Skills</h2>
-    <p>HTML, CSS, JavaScript, Python, AI, Machine Learning</p>
-    <!-- Add skill icons or progress bars -->
+    <p>HTML, CSS,JavaScript, Python, SQL , AI </p>
+  
   </section>
 
-  <!-- Contact Section -->
+
   <section id="contact">
     <h2>Contact Me</h2>
     <div class="contact-info">
@@ -83,12 +83,12 @@
   <footer>
     <p>&copy; 2025 Ziyad. All rights reserved.</p>
     <div class="social-icons">
-      <a href="https://www.linkedin.com" title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
+      <a href="www.linkedin.com/in/ziyad-tber-02109533b" title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
       <a href="https://github.com/ziyad455/MASTER.git" title="GitHub"><i class="fa-brands fa-github"></i></a>
     </div>
   </footer>
 
-  <!-- Include the script file -->
+  
   <script>
     document.addEventListener("DOMContentLoaded", function () {
       const hamburgerMenu = document.getElementById("hamburgerMenu");
