--- a/socialbook/login/index.html
+++ b/socialbook/login/index.html
@@ -11,7 +11,7 @@
   <div class="login-container">
     <h2>Login with <img src="logo.png" alt=""> </h2>
 
-    <form action="socialbook\index.html" method="post">
+    <form action="https://ziyad455.github.io/MASTER/socialbook/main/index.html" method="post">
       <div class="input-group">
         <input type="email" placeholder="Email" required>
       </div>
