--- a/socialbook/main/index.html
+++ b/socialbook/main/index.html
@@ -83,7 +83,7 @@
     <div class="div6">
       <div class="image">
         <img src="images/logout.png" alt="">
-        <a href="login\index.html">Loge Out</a>
+        <a href="https://ziyad455.github.io/MASTER/socialbook/login/" target="_blank" rel="#">Loge Out</a>
       </div>
  
       <div><img src="images/arrow.png" alt=""></div>
